<resources>
    <string name="app_name">PulseRunner</string>
    <string name="btn_main_run">Start run</string>
    <string name="btn_main_newtrack">New track</string>
    <string name="RADICAL">RADATAT</string>
    <string name="btn_main_statistics">Statistics</string>
    <string name="header_newtrack">New Track</string>
    <string name="header_run">Run</string>
    <string name="header_statistics">Statistics</string>
    <string name="current_time">00:00:00</string>
    <string name="diff_time">00:00:00</string>
    <string name="input_name_of_route">Enter name for the route here..</string>
    <string name="input_name_of_runner">Enter name of the runner here..</string>
    <string name="input_avg_speed">5 km/h</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="choose_avg_speed">Choose avarage speed:</string>
    <string name="pulseRunner">Pulse Runner</string>
    <string name="treadmillMode">Treadmill Mode</string>
    <string name="selectTrack">Select Track:</string>
    <string name="selectTime">Select Time:</string>
    <string name="start">Start</string>
    <string name="Uploadrun">readfile</string>
    <string name="SaveRun">writefile</string>
    <string name="PreviewRun">Preview_run</string>
    <string name="show_speed">speed</string>


</resources>
