<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mamn10grupp10.pulserunner.NewTest">

    <Button
        android:id="@+id/load"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:onClick="readFile"
        android:text="@string/Uploadrun"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />


    <EditText
        android:id="@+id/textData"
        android:layout_width="387dp"
        android:layout_height="89dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="data"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textFilename"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/SaveRun"
        android:onClick="writeFile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/read"
        android:layout_width="0dp"
        android:layout_height="204dp"
        android:layout_marginRight="8dp"
        android:text="@string/PreviewRun"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/PreviewRun"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textData"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/textFilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="filnavn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/save"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
